get multiple file selection in irods browser working

--- a/irods_browser_app/templates/irods_upload_add.html
+++ b/irods_browser_app/templates/irods_upload_add.html
@@ -18,7 +18,7 @@
                         <input type="hidden" id="irods-host" name="irods-host" value="">
                         <input type="hidden" id="irods-port" name="irods-port" value="">
                         <input type="hidden" id="irods-zone" name="irods-zone" value="">
-                        <input type="hidden" name="irods_file_name" id="upload_store" value=""/>
+                        <input type="hidden" name="irods_file_names" id="upload_store" value=""/>
                         <div id="irods_structure">
                             <div id="viewing">Viewing : <input type="text" id="irods_view_store" ></div>
                             <div id = "file_struct"></div>
