--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -82,7 +82,7 @@
                 <input type="hidden" id="irods-host" name="irods-host" value="">
                 <input type="hidden" id="irods-port" name="irods-port" value="">
                 <input type="hidden" id="irods-zone" name="irods-zone" value="">
-                <input type="hidden" id="irods_file_name" name="irods_file_name" value="">
+                <input type="hidden" id="irods_file_names" name="irods_file_names" value="">
                 <a id="btn-select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent" style="display:none;">
                     <span class="glyphicon glyphicon-plus"><span class="button-label">Browse iRODS...</span></span></a>
                 <span id="irods-sel-file"></span>
