--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -14,21 +14,21 @@
 
             </div>
             <div class="col-sm-9 col-xs-12">
-                <h2><b>{{ u.first_name }} {{ u.last_name }}</b></h2>
+                <h2>{{ u.first_name }} {{ u.last_name }}</h2>
 
                 <h4 class="text-muted">
                     {% if profile.organization %}{{ profile.organization }}{% endif %} |
                     {% if profile.title %}{{ profile.title }}{% endif %}
                 </h4>
-                <table>
+                <table class="overview">
                     <tbody>
                     {% if profile.subject_areas %}
                         <tr>
-                            <td><span class="text-muted">Subject Areas:</span></td>
+                            <td><span class="text-muted">Subject Areas</span></td>
                             <td>{{ profile.subject_areas }}</td>
                         </tr>
                         <tr>
-                            <td><span class="text-muted">Profession:</span></td>
+                            <td><span class="text-muted">Profession</span></td>
                             <td>Computer Scientist</td>
                         </tr>
                     {% endif %}
@@ -36,7 +36,7 @@
                     </tbody>
                 </table>
 
-                <h4>About {{ u.first_name }}</h4>
+                <h3>About {{ u.first_name }}</h3>
 
                 <p>{{ profile.details }}</p>
                 {#                {% if profile.profession %}#}
@@ -54,14 +54,18 @@
                 <div>
                     <div class="tabbable tabs-left">
                         <ul class="nav nav-tabs col-sm-3">
-                            <li class="active"><a class="text-muted" href="#tab-affiliations" data-toggle="tab">Affiliations</a>
+                            <li class="active"><a class="text-muted" href="#tab-affiliations" data-toggle="tab">
+                                <i class="glyphicon glyphicon-list-alt"></i>&nbsp;&nbsp;Affiliations</a>
                             </li>
-                            <li><a class="text-muted" href="#tab-contributions" data-toggle="tab">Contributions</a></li>
-                            <li><a class="text-muted" href="#tab-contact" data-toggle="tab">Contact</a></li>
+                            <li><a class="text-muted" href="#tab-contributions" data-toggle="tab">
+                                <i class="glyphicon glyphicon-pushpin"></i>&nbsp;&nbsp;Contributions</a></li>
+
+                            <li><a class="text-muted" href="#tab-contact" data-toggle="tab">
+                                <i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Contact</a></li>
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" id="tab-affiliations">
-                                <div class="row pull-left affiliation-row">
+                                <div class="pull-left affiliation-row">
                                     <div class="col-xs-12 col-sm-9">
                                         <a href="http://www.usu.edu/" target="_blank">
                                             <span class="organization_name">Utah State University</span></a>
@@ -76,7 +80,7 @@
                                                                                            alt="USU logo"></a>
                                     </div>
                                 </div>
-                                <div class="row pull-left affiliation-row">
+                                <div class="pull-left affiliation-row">
                                     <div class="col-xs-12 col-sm-9">
                                         <a href="http://www.usu.edu/" target="_blank">
                                         <span class="organization_name">Utah Water Research
@@ -96,52 +100,45 @@
                             </div>
                             <div class="tab-pane" id="tab-contributions">
                                 <div class=col-sm-12">
-                                    <table class="table table-striped table-hover">
-                                        <tbody>
+                                    <div id="list-contributions" class="list-group">
                                         {% for res in resources %}
-                                            <tr>
-                                                <td>
-                                                    <h5><a href="{{ res.get_absolute_url }}">{{ res.title }}</a></h5>
-                                                </td>
-                                                <td>
-                                                    <h5 class="text-muted">Last modified: {{ res.updated|date }}, {{ res.updated|time }}</h5>
-                                                </td>
-                                            </tr>
-                                            {% empty %}
-                                            <td>This user has no Resources, yet.</td>
+                                            <a href="{{ res.get_absolute_url }}" class="list-group-item">
+                                                <h4 class="list-group-item-heading"><i class="glyphicon glyphicon-file"></i>&nbsp;&nbsp;{{ res.title }}</h4>
+                                                {% if res.metadata.description %}
+                                                    <p class="list-group-item-text quote">{{ res.metadata.description }}</p>
+                                                {% endif %}
+                                            </a>
                                         {% endfor %}
-                                        </tbody>
-                                    </table>
-
+                                    </div>
                                 </div>
                             </div>
                             <div class="tab-pane" id="tab-contact">
                                 <div class="col-sm-12">
                                     <h4>Contact info</h4>
-                                    <table>
+                                    <table class="overview">
                                         <tbody>
                                         {% if profile.phone_1 %}
                                             <tr>
-                                                <td><span class="text-muted">{{ profile.phone_1_type }}:</span></td>
+                                                <td><span class="text-muted">{{ profile.phone_1_type }}</span></td>
                                                 <td>{{ profile.phone_1 }}</td>
                                             </tr>
                                         {% endif %}
                                         {% if profile.phone_2 %}
                                             <tr>
-                                                <td><span class="text-muted">{{ profile.phone_2_type }}:</span></td>
+                                                <td><span class="text-muted">{{ profile.phone_2_type }}</span></td>
                                                 <td>{{ profile.phone_2 }}</td>
                                             </tr>
                                         {% endif %}
                                         {% if u.email %}
                                             {% if user.pk %}
                                                 <tr>
-                                                    <td><span class="text-muted">Email:</span></td>
+                                                    <td><span class="text-muted">Email</span></td>
                                                     <td><a href="mailto:{{ u.email }}">send email
                                                         to {{ u.first_name }}</a></td>
                                                 </tr>
                                             {% else %}
                                                 <tr>
-                                                    <td><span class="text-muted">Email:</span></td>
+                                                    <td><span class="text-muted">Email</span></td>
                                                     <td>(<a href="/accounts/login/">Log in to send email</a>)</td>
                                                 </tr>
                                             {% endif %}
@@ -180,20 +177,16 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <h4>Activity</h4>
+                <h3>Activity</h3>
                 {% for res in resources %}
 
                 <div class="activity-block">
                     <img src="{{ profile.picture.url }}" class="activity-thumbnail" alt="profile picture">
-                    <span>{{ u.first_name }} {{ u.last_name }}</span><span class="text-muted"> shared </span>
+                    <strong>{{ u.first_name }} {{ u.last_name }}</strong><span class="text-muted"> shared </span>
                     <span><a href="{{ res.get_absolute_url }}">{{ res.title }}</a></span>
                     <h5 style="margin-top:0" class="text-muted">{{ res.created }}</h5>
-                    <ul>
-                        <li><a class="tag">test</a></li>
-                    </ul>
                     {% if  res.metadata.description %}
-                    <h5 style="margin-top:0">{{ res.metadata.description }}</h5>
-
+                    <h5 class="quote" >{{ res.metadata.description }}</h5>
                     {% endif %}
                 </div>
                 {% endfor %}
