--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2584,6 +2584,7 @@
         $(".dateinput").each(function(){
             $(this).datepicker({
                 format: 'mm-dd-yyyy',
+                yearRange: "-100:+0",
                 changeMonth: true,
                 changeYear: true
              });
