--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2583,7 +2583,7 @@
         })
         $(".dateinput").each(function(){
             $(this).datepicker({
-                format: 'mm-dd-yyyy',
+                dateFormat: 'yy-mm-dd',
                 yearRange: "-1000:+1000",
                 changeMonth: true,
                 changeYear: true
