--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -32,7 +32,7 @@
             </div>
 
             <!-- robline: putting this here to test oauth login -->
-            <input type="hidden" name="next" value="{{ next }}" />
+            <input type="hidden" name="next" value="{{ request.GET.next }}" />
 
             {% block account_form_actions %}
                 <div class="row">
