Implemented model program foreign key relationship in swat model instance.  Modified the fk definition in model instance.

--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -179,9 +179,11 @@
         </div>
     {%  endif %}
 {%  endblock %}
+
+{% load staticfiles  %}
 {% block extra_js %}
     {{ block.super }}
 
     {# resource specific js can go here #}
-
+    <script src="{% static "js/model_instance.js"%}"></script>
 {%  endblock %}
